<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/baby_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baby_name_text_hint" />

        <EditText
            android:id="@+id/baby_add_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baby_class_text_hint" />

        <EditText
            android:id="@+id/baby_add_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baby_secret_text_hint" />

        <EditText
            android:id="@+id/baby_add_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baby_key_text_hint" />

        <EditText
            android:id="@+id/baby_add_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/baby_finder_phone_text_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/err_add_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/err_hint"
            android:textColor="@color/colorAccent"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>